Fix issue with scrollbar

--- a/src/global.style.css
+++ b/src/global.style.css
@@ -20,3 +20,7 @@ body::-webkit-scrollbar-thumb {
   transform: translateY(-100%);
   transition: transform 0.3s ease-in-out;
 }
+
+body {
+  background-color: red;
+}
